force-app/main/default/objects/Proto_A_Quote_Line__c/Proto_A_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Proto A Quote Line</label>
    <nameField>
        <label>Proto A Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proto A Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>