force-app/main/default/objects/Proto_A_Quote_Line__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>7</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>