force-app/main/default/objects/Proto_A_Quote_Line__c/fields/Proto_A_Quote__c.field-meta.xml
<CustomField>
    <fullName>Proto_A_Quote__c</fullName>
    <label>Proto A Quote</label>
    <referenceTo>Proto_A_Quote__c</referenceTo>
    <relationshipLabel>Proto A Quote Lines</relationshipLabel>
    <relationshipName>Proto_A_Quote_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>