force-app/main/default/objects/Proto_A_Quote_Line__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>